fix z-index responsive drawer, fix button color, drawer

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     display: inline-block;
     line-height: 1;
+    color: #fff;
 }
 .button:disabled{
     background-color: #e0e0e0;
